@@ -2022,7 +2022,7 @@ ags_machine_popup_add_edit_options(AgsMachine *machine, guint edit_options)
  *
  * Add options to connection submenu
  *
- * Since: 0.4.2
+ * Since: 0.4.3
  */
 void
 ags_machine_popup_add_connection_options(AgsMachine *machine, guint connection_options)
@@ -2030,6 +2030,22 @@ ags_machine_popup_add_connection_options(AgsMachine *machine, guint connection_o
   GtkMenu *connection;
   GtkMenuItem *item;
 
+  gchar *str;
+
+  str = ags_config_get_value(ags_config_get_instance(),
+			     AGS_CONFIG_GENERIC,
+			     "disable-feature\0");
+
+  if(!g_ascii_strncasecmp(str,
+			  "experimental\0",
+			  13)){
+    g_free(str);
+    
+    return;
+  }
+
+  g_free(str);
+  
   item = (GtkMenuItem *) gtk_menu_item_new_with_label(g_strdup("connection\0"));
   gtk_menu_shell_append((GtkMenuShell *) machine->popup, (GtkWidget*) item);
   gtk_widget_show(item);
